# uagent

./: .gitignore  LICENSE.txt  MANIFEST  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
uagent/: __init__.py  tests.py  uagent.py  uastrings.py
