[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uagent"
dynamic = ["version"]
description = "Generate random user agent strings across a wide range of browser and device categories."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rangertaha", email = "rangertaha@gmail.com" }]
keywords = ["user", "agent", "random", "generator", "category", "useragent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rangertaha/uagent"
Repository = "https://github.com/rangertaha/uagent"
Issues = "https://github.com/rangertaha/uagent/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.version]
path = "uagent/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["uagent", "README.md", "LICENSE.txt"]

[tool.hatch.build.targets.wheel]
packages = ["uagent"]

[tool.ruff]
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["uagent"]
python_files = ["tests.py", "test_*.py"]
